2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: better DESTDIR/libdir support (steffen)

2002-08-30  Brent Welch <welch@panasas.com>
        * Merged the tclhttpd-3-4-rel branch into the trunk.
          tclhttpd-3-4-rel-1 represents the 3.4.1 release and
          the merge point.

2002-08-30  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).
        * Modified Auth_Check, which is used by DocAccessHook, to
        disallow retrieval of .tml, .tclaccess and .htaccess files.
        This vulnerability was identified by David Welton, although
        I'll note you had to had permission to retrieve the access
        control files.
        * lib/url.tcl: Added Url_AccessUnInstall to remove hooks.
        From Petrus Vloet:
        * lib/debug.tcl: Added /debug/enable so you can disable the
        Debug URL.
        * lib/direct.tcl: Added Direct_UrlRemove to support disabling
        the debug url.
        * htdocs/hacks.tml: Updated to explain the /debug URL features

2002-08-29  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).  These were added on
        the suggestion of David Welton
        * lib/auth.tcl: Auth_Check checks that the path is a directory
        before rummaging around for the .tclaccess and .htaccess files
        * lib/url.tcl: Added Url_AccessInstallPrepend to put the
        access hook at the front of the search path.

2002-08-26  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch)
        * lib/cgi.tcl: Fixed POST forms on Windows so we correctly set up
          the pipe to the subprocess and detect the header/body separator
        * lib/upload.tcl: Nuked the CvsReadFileHeader call
        * lib/version.tcl: Updated to 3.4.1
        * bin/httpd.tcl.new: Deleted this cruft
        As a bonus - these features:
        * lib/mtype.tcl: Added Mtype_Add and Mtype_Reset
        * lib/mime.types: added application/x-ns-proxy-autoconfig
